# MCJukebox-Widget

./: CMakeLists.txt  LICENSE  README.md  mpdListen.cpp  mpdListen.h
contents/: todo.txt
contents/code/: binarySearch.js  dirSanitize.js  timeData.js  titles.js
contents/images/background/: out.xcf
contents/ui/: BashExec.qml  Button.qml  LabelledButton.qml  PlaylistMenu.qml  VisualButton.qml  addPlaylist.qml  editPlaylist.qml  main.qml  mpcConfig.qml
package/: metadata.json
package/contents/: todo.txt
package/contents/code/: timeData.js
package/contents/config/: main.xml
package/contents/fonts/: Credits.txt
package/contents/ui/: BashExec.qml  Core.qml  FadeAnim.qml  LabelledButton.qml  PlaylistMenu.qml  Singleton.qml  VisualButton.qml  VisualTextField.qml  addPlaylist.qml  dependencyFailure.qml  editPlaylist.qml  main.qml  mpcConfig.qml  qmldir
